--- a/etc/systemd/system/suspend-lock.service
+++ b/etc/systemd/system/suspend-lock.service
@@ -1,11 +1,10 @@
-[Unit]
+[Unit] 
 Description=Lock the screen on resume from suspend
-Before=sleep.target
 
 [Service]
 User=james
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/i3lock-custom
+ExecStart=/usr/bin/xautolock -locknow
 
 [Install]
 WantedBy=sleep.target
