--- a/etc/xdg/autostart/xautolock.desktop
+++ b/etc/xdg/autostart/xautolock.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=xautolock -time 10 -locker "systemctl suspend" -nowlocker i3lock-custom -corners 000- -detectsleep
+Exec=xautolock -time 10 -locker i3lock-custom-n -killtime 10 -killer "systemctl suspend" -corners 000- -detectsleep
 Name=XAutolock
 Name[en_US]=XAutolock
 Terminal=false
