--- a/home/james/.i3/config
+++ b/home/james/.i3/config
@@ -33,11 +33,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -160,7 +160,7 @@ workspace_layout tabbed
 for_window [class="Main.py" instance="guake"] floating enable
 
 #Locking Ctrl-Super-l
-bindsym Ctrl+$mod+l exec i3lock-custom
+bindsym Ctrl+$mod+l exec xautolock -locknow
 
 #Xkill
 bindsym Ctrl+$mod+x exec DISPLAY=:0 xkill
@@ -181,7 +181,13 @@ bindsym XF86AudioMute exec amixer -q set Master toggle
 bindsym XF86Suspend exec systemctl hibernate
 
 #Dex autostart /etc/xdg/autostart desktop files
-exec dex -ae i3
+exec dex -a
 
 #Desktop background
 exec feh --bg-scale ~/wallpaper.png
+
+#Synaptics
+exec synclient HorizTwoFingerScroll=1
+exec synclient EmulateMidButtonTime=100
+exec synclient CircularScrolling=1
+exec synclient CircScrollTrigger=1
