--- a/etc/systemd/system/suspend-to-hibernate.service
+++ b/etc/systemd/system/suspend-to-hibernate.service
@@ -1,14 +1,18 @@
 [Unit]
-Description=delayed hibernation trigger
+Description=Delayed hibernation trigger
+Documentation=https://bbs.archlinux.org/viewtopic.php?pid=1420279#p1420279
+Documentation=https://wiki.archlinux.org/index.php/Power_management
 Before=suspend.target
+Conflicts=hibernate.target hybrid-suspend.target
 StopWhenUnneeded=true
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
 Environment="WAKEALARM=/sys/class/rtc/rtc0/wakealarm"
-ExecStart=-/bin/sh -c 'echo -n "alarm set for "; date +%%s -d+20min | tee $WAKEALARM'
-ExecStop=-/bin/sh -c '\
+Environment="SLEEPLENGTH=+2hour"
+ExecStart=-/usr/bin/sh -c 'echo -n "alarm set for "; date +%%s -d$SLEEPLENGTH | tee $WAKEALARM'
+ExecStop=-/usr/bin/sh -c '\
   alarm=$(cat $WAKEALARM); \
   now=$(date +%%s); \
   if [ -z "$alarm" ] || [ "$now" -ge "$alarm" ]; then \
