--- a/home/username/.i3status.conf
+++ b/home/username/.i3status.conf
@@ -8,9 +8,10 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 1
 }
 
+order += "load"
 order += "cpu_usage"
 order += "ethernet enp0s25"
 order += "wireless wlp2s0"
@@ -31,13 +32,14 @@ ethernet enp0s25 {
 battery 1 {
 	last_full_capacity = true
 	integer_battery_capacity = true
-	low_threshold = 10
+	low_threshold = 15
 	threshold_type = time
+	hide_seconds = true
         format = "%status %percentage %remaining %consumption"
 }
 
 tztime local {
-        format = "%a-%d-%m %I:%M:%S"
+        format = "%F %a %I:%M:%S"
 }
 
 cpu_usage {
