Little bit of cleanup

--- a/.config/autostart/XAutoLock.desktop
+++ b/.config/autostart/XAutoLock.desktop
@@ -4,7 +4,7 @@ Version=0.9.4
 Type=Application
 Name=XAutoLock
 Comment=XAutoLock
-Exec=xautolock -time 10 -locker "i3lock-custom -n" -killtime 10 -killer "systemctl suspend" -corners 000- -cornersize 30 -detectsleep
+Exec=xautolock -time 5 -locker "i3lock-custom -n" -killtime 10 -corners 000- -cornersize 30
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
